--- a/P10App/api/package.json
+++ b/P10App/api/package.json
@@ -29,7 +29,8 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
