--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install:client": "cd P10App/client && npm ci",
+    "build:client": "cd P10App/client && npm run build",
+    "dev:client": "cd P10App/client && npm run dev",
+    "install:api": "cd P10App/api && npm ci",
+    "build:api": "cd P10App/api && npm run build",
+    "dev:api": "cd P10App/api && npm run dev"
   },
   "repository": {
     "type": "git",
